# sh-rust

./: Cargo.toml  build.sh
frontend/: components.d.ts  index.html  package-lock.json
frontend/public/img/portraits/: copyrigth.txt
frontend/src/components/: BoardView.vue  HistoryList.vue  LawsField.vue  PlayerCard.vue  TaskBar.vue
frontend/src/model/: connection.ts  storage.ts  types.ts
frontend/src/pages/: game.vue  index.vue
frontend/src/plugins/: vuetify.ts
src/: lib.rs  main.rs
src/core/: cfg.rs  mod.rs  state.rs  types.rs  view.rs
